--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-speech-recognition": "^3.10.0",
     "react-textarea-autosize": "^8.5.3",
+    "regenerator-runtime": "^0.14.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@types/react": "^18",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "typescript": "^5"
